--- a/old_man_do/pubspec.yaml
+++ b/old_man_do/pubspec.yaml
@@ -1,5 +1,5 @@
 name: old_man_do
-description: "A new Flutter project."
+description: "Martial Longevity & Side Kick Mastery Program - Complete training system for martial artists 50+."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+2
+version: 2.1.0+4
 
 environment:
   sdk: ^3.10.8
